--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>scalameta_${scala.binary.version}</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
+            <version>3.2.15</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
