--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <version>${scala.version}</version>
         </dependency>
         <dependency>
+        <groupId>com.lihaoyi</groupId>
+        <artifactId>fastparse_${scala.binary.version}</artifactId>
+        <version>2.3.3</version> 
+    </dependency>
+        <dependency>
             <groupId>org.scalameta</groupId>
             <artifactId>scalameta_${scala.binary.version}</artifactId>
             <version>4.0.0</version>
